# cpp_chess

./: CMakeLists.txt
scripts/: chess.cpp  chess.h  main.cpp
